// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpansionIndicatorDetails component should with isExpanded like false 1`] = `
<styled.span>
  <Styled(SvgIconExpandTextSm) />
  <styled.span>
    Show details
  </styled.span>
</styled.span>
`;

exports[`ExpansionIndicatorDetails component should with isExpanded like true 1`] = `
<styled.span>
  <Styled(SvgIconCollapseTextSm) />
  <styled.span>
    Close details
  </styled.span>
</styled.span>
`;
